--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,8 @@
 /* Variables */
 
 :root {
-  --color-win: #78CF82;
-  --color-lose: #D94545;
+  --color-win: lime;
+  --color-lose: red;
   --color-start: #5b85b7;
   --color-neutral: #445069;
   --color-neutral-light: #D2D2D2;
@@ -110,8 +110,8 @@ button {
 
 
 .show {
-  color: #fff;
-  background-color: #4ac0d5;
+  color: black;
+  background-color: var(--color-win);
   font-size: 20px;
   height: 65px;
   width: 65px;
@@ -131,14 +131,14 @@ button {
 }
 
 .chosen {
-  background: #3a3f58;
+  background: var(--color-win);
   border-radius: 5px;
   font-size: var(--font-size-medium);
-  color: #FFFFFF;
+  color: black;
 }
 
 .wrong {
-  background: #f7a964;
+  background: var(--color-lose);
   color: #FFFFFF;
 }
 
@@ -166,7 +166,7 @@ button {
   display: flex;
   flex-direction: column;
   position: fixed;
-  color: #FFFFFF;
+  color:black;
   justify-content: center;
   top: 0;
   bottom: 0;
@@ -176,7 +176,7 @@ button {
 }
 
 .title {
-  color: #FFF;
+  color:black;
 }
 
 .start {
@@ -196,7 +196,7 @@ button {
 }
 
 .lose {
-  background-color: #f5785f;
+  background-color: var(--color-lose);
 }
 
 .lose a {
